--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
     "next": "latest",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "query-string": "^6.12.1",
