--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "latest",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.14.1",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.12.1",
     "ramda": "^0.27.0",
