--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.9.0",
+    "react-froala-wysiwyg": "^3.1.1-1",
     "react-modal": "^3.11.2",
     "react-onclickoutside": "^6.9.0",
     "react-pluralize": "^1.6.3",
