--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "debug": "NODE_OPTIONS='--inspect' NEXT_PUBLIC_API_GATEWAY_URL=https://devapi.analyttica.com next",
-    "dev": "NEXT_PUBLIC_API_GATEWAY_URL=https://devapi.analyttica.com next",
+    "dev": "NEXT_PUBLIC_API_GATEWAY_URL=https://leapsapi.analyttica.com next",
     "build": "NEXT_PUBLIC_API_GATEWAY_URL=https://leapsapi.analyttica.com next build",
     "start": "next start"
   },
@@ -17,6 +17,7 @@
     "classnames": "^2.2.6",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
+    "fusioncharts": "^3.15.1-sr.1",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
@@ -24,6 +25,7 @@
     "node-fetch": "^2.6.0",
     "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
+    "papaparse": "^5.2.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.12.1",
     "ramda": "^0.27.0",
@@ -31,6 +33,8 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.9.0",
     "react-froala-wysiwyg": "^3.1.1-1",
+    "react-fusioncharts": "^3.1.2",
+    "react-grid-layout": "^0.18.3",
     "react-modal": "^3.11.2",
     "react-onclickoutside": "^6.9.0",
     "react-pluralize": "^1.6.3",
